# Daydream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Daydream/: Core  EBM.h  MNIST.h  Optimizer.h  RBM.h  Utils.h
data/: get_mnist.py
example/: Display.h  example.cpp
src/: MNIST.cpp  Optimizer.cpp  RBM.cpp  Utils.cpp
